# VoltSet

./: README.md
Code Arduino IDE/: READ ME.txt
Code Arduino IDE/VoltSet35B_BETA/: CMakeLists.txt  VoltSet35B_BETA.ino  filelist.txt  ui.c  ui.h  ui_MainScreen.c  ui_MainScreen.h  ui_SettingsScreen.c  ui_SettingsScreen.h  ui_StartupScreen.c  ui_StartupScreen.h  ui_comp_hook.c  ui_events.cpp  ui_events.h  ui_font_Archimoto_Labels.c  ui_helpers.c  ui_helpers.h  ui_img_logopng_png.c
Code Arduino IDE/VoltSet35B_BETA/UI/: ui_events.cpp
Code Arduino IDE/VoltSet35B_BETA/UI/assets/: ui_font_Archimoto_EXTRA.fcfg  ui_font_Archimoto_Numbers.c  ui_font_Archimoto_Numbers.fcfg
Code Arduino IDE/VoltSet35B_BETA/UI/backup/: VoltSet.sll  VoltSet.slp  VoltSet_events.py  project.info
Code Arduino IDE/VoltSet35B_BETA/UI/backup/assets/: ui_font_Archimoto_EXTRA.c
Code Arduino IDE/libraries/: lv_conf.h
Shopping list/: Main shopping list
Squareline Studio/assets/: ui_font_Archimoto_EXTRA.c  ui_font_Archimoto_Labels.c  ui_font_Archimoto_Labels.fcfg
Squareline Studio/backup/: VoltSet.spj
Squareline Studio/backup/assets/: ui_font_Archimoto_EXTRA.fcfg  ui_font_Archimoto_Labels.c  ui_font_Archimoto_Labels.fcfg  ui_font_Archimoto_Numbers.c  ui_font_Archimoto_Numbers.fcfg
Squareline Studio/components/: Soft.ecomp
